# Generative-Adversarial-Networks-GANs-Specialization

./: .gitignore  README.md  pyproject.toml  requirements.txt
build_basic_generative_adversarial_networks/week1/: w1_assignment_your_first_gan.ipynb
build_basic_generative_adversarial_networks/week2/: w2_assignment_dcgan.ipynb
build_basic_generative_adversarial_networks/week3/: w3_assignment.ipynb  w3_optional_protein_gan.ipynb
build_better_generative_adversarial_networks/: frechet_inception_distance_lab.ipynb
week1/: assignment.ipynb  into_to_pytorch.ipynb
week2/: w2_assignment_dcgan.ipynb
week4/: w4_build_conditional_gan.ipynb  w4_build_controllable_gan.ipynb
