[tool.poetry]
name = "generative-adversarial-networks-gans-specialization"
version = "0.1.0"
description = ""
authors = ["Mark Barbaric <markantonybarbaric@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchdata = "^0.7.1"
torchvision = "^0.18.1"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
